--- a/frontend/src/components/Dashboard/AddItem.module.css
+++ b/frontend/src/components/Dashboard/AddItem.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin-top: -10;
+    height: 95vh;
+    margin-top: 50px;
   }
   
   .adminForm {
@@ -28,6 +28,7 @@
   
   .formGroup input {
     width: 100%;
+    height: 91%;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
