--- a/frontend/src/components/Dashboard/Inventory.module.css
+++ b/frontend/src/components/Dashboard/Inventory.module.css
@@ -1,17 +1,55 @@
 .inventory {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    width: 100%;
+    margin: 0 auto;
   }
   
   .heading {
-    font-size: 2rem;
-    margin-bottom: 1rem;
+    text-align: center;
+    margin-top: 120px;
   }
   
-  .message {
-    font-size: 1.5rem;
+  .sortButton {
+    display: block;
+    margin: 20px auto;
+    padding: 10px;
+    background-color: #007bff;
     color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
+  
+  .sortButton:hover {
+    background-color: #0056b3;
+  }
+  
+  .itemList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .itemRow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 9px;
+    border-bottom: 1px solid #ccc;
+    gap: 30px;
+  }
+  
+  .thumbnail {
+    width: 70px;
+    height: 70px;
+  }
+  
+  .itemName {
+    flex-grow: 1; /* Allows the name to take available space */
+  }
+  
+  .quantity {
+    width: auto;
+    white-space: nowrap;
+  }
+  
