styling completed for dashboard inventory and edit menu

--- a/frontend/src/components/Dashboard/EditMenu.module.css
+++ b/frontend/src/components/Dashboard/EditMenu.module.css
@@ -5,73 +5,68 @@
     min-width: 680px;
     justify-content: center;
   }
+  
   .smallText {
     text-align: center;
-    background-color: #dde1e2;
+    background-color: #292a2b;
     border-radius: 5px;
-    color: rgb(92, 90, 90);
+    color: rgb(243, 240, 240);
     font-size: 0.85em;
     font-weight: 600;
     margin-bottom: 20px;
     width: 100%;
   }
-
+  
   .smallText2 {
     text-align: center;
     border-radius: 5px;
     font-weight:700;
-    color: rgb(49, 48, 48);
+    color: rgb(243, 240, 240);
     font-size: 1em;
     margin-bottom: 6px;
   }
-
+  
   .sectionTitle {
     margin: 10px;
     text-align: center;
-    color: rgb(32, 30, 30);
+    color: rgb(243, 240, 240);
   }
   
   .itemRow {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     margin-bottom: 10px;
-    color: rgb(35, 34, 34);
+    color: rgb(243, 240, 240);
+    border-bottom: 1px solid #ccc;
+    gap: 10px;
   }
-
+  
   .itemRow button {
     border-radius: 6px;
-    cursor: pointer;
   }
   
   .thumbnail {
     width: 90px;
-    height: 70px;
-    margin-right: 10px;
+    height: auto;
+    margin-right: 12px;
+  }
+
+  .name {
+    width: 100%;
   }
   
   .checkbox {
-    margin-left: 10px;
-    cursor: pointer;
-    border: solid rgb(51, 50, 50) 2px;
+    margin-left: 50px;
   }
   
   .deleteButton {
-    margin-left: 10px;
-    cursor: pointer;
-    border: solid rgb(174, 172, 172) 2px;
+    margin-left: auto;
   }
   
-  .onMenuSection {
-    background-color: #e9f0ea;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 48px;
+  .onMenuSection, .offMenuSection {
+      padding:10px; 
+      border-radius:10px; 
+      margin-bottom:48px; 
   }
-  
-  .offMenuSection {
-    background-color: #9fa7ae;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  
