--- a/frontend/src/components/Dashboard/AddItem.module.css
+++ b/frontend/src/components/Dashboard/AddItem.module.css
@@ -8,7 +8,7 @@
   
   .adminForm {
     width: 60%;
-    background-color: #f4f4f4;
+    /*background-color: #f4f4f4;*/
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -16,7 +16,7 @@
   
   .heading {
     text-align: center;
-    color: black;
+    color: rgb(239, 236, 236);
     margin-bottom: 1.5rem;
   }
   
@@ -42,12 +42,14 @@
   }
   
   .onMenu label {
-    margin-bottom: 0.5rem;
-    font-weight: 400;
-    color: rgb(70, 68, 68);
+    margin: 12px;
+    font-weight: 500;
+    font-size: .9rem;
+    color: rgb(226, 223, 223);
   }
   
   .onMenu input {
+    margin-bottom: 10px;
     width: 20px;
     height: 20px;
   }
@@ -56,7 +58,7 @@
     display: block;
     width: 100%;
     padding: 0.75rem 1rem;
-    background-color: #007bff;
+    background-color: #007bff !important;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -66,5 +68,5 @@
   }
   
   .addItemButton:hover {
-    background-color: #0056b3;
+    background-color: #0056b3 !important;
   }
