--- a/frontend/src/components/Dashboard/Inventory.module.css
+++ b/frontend/src/components/Dashboard/Inventory.module.css
@@ -5,7 +5,7 @@
   
   .heading {
     text-align: center;
-    margin-top: 120px;
+    margin-top: 130px;
   }
   
   .sortButton {
@@ -34,22 +34,29 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 9px;
+    padding: 8px;
     border-bottom: 1px solid #ccc;
-    gap: 30px;
   }
   
   .thumbnail {
-    width: 70px;
+    width: 90px;
     height: 70px;
+    margin-right: 12px;
   }
   
   .itemName {
-    flex-grow: 1; /* Allows the name to take available space */
+    flex-grow: 1;
+    margin-left: 10px;
   }
   
   .quantity {
     width: auto;
-    white-space: nowrap;
+  }
+  
+  .quantityInput {
+     width: auto;
+     padding:5px; 
+     border-radius:4px; 
+     border:1px solid #ccc; 
   }
   
