--- a/frontend/src/components/Dashboard/LoadingSpinner.module.css
+++ b/frontend/src/components/Dashboard/LoadingSpinner.module.css
@@ -12,7 +12,7 @@
   }
   
   .spinnerContainer {
-    background-color: rgba(128, 128, 128, 0.8); /* semi-transparent gray */
+    background-color: rgba(35, 35, 35, 0.8);
     padding: 20px;
     border-radius: 10px;
     display: flex;
