--- a/frontend/src/components/Dashboard/SuccessModal.module.css
+++ b/frontend/src/components/Dashboard/SuccessModal.module.css
@@ -12,8 +12,15 @@
   }
   
   .modalContent {
-    background-color: white;
+    background-color: rgb(12, 12, 12);
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 8px;
     text-align: center;
+  }
+
+  .message {
+    color: rgb(11, 125, 11);
+    font-weight: 500;
+    font-size: 1.2rem;
+    max-width: 150px;
   }
