--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -21,41 +21,41 @@
 }
 
 .order-summary {
-    width: 100%;
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .cart-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid silver;
-    width: 100%;
-  }
-  
-  .col1 {
-    flex: 2;
-    text-align: left;
-  }
-  
-  .col2 {
-    flex: 1;
-    text-align: center;
-  }
-  
-  .col3 {
-    flex: 1;
-    text-align: right;
-  }
-  
-  .total {
-    margin-top: 18px;
-    font-weight: 500;
-    text-align: right;
-  }
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid silver;
+  width: 100%;
+}
+
+.col1 {
+  flex: 2;
+  text-align: left;
+}
+
+.col2 {
+  flex: 1;
+  text-align: center;
+}
+
+.col3 {
+  flex: 1;
+  text-align: right;
+}
+
+.total {
+  margin-top: 18px;
+  font-weight: 500;
+  text-align: right;
+}
 
 @media (max-width: 900px) {
   .col1 {
@@ -72,46 +72,48 @@
 }
 
 .checkout-page button {
-    background-color: silver;
-    color: black;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 12px;
-    cursor: pointer;
-    margin: 10px 10px;
+  background-color: silver;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 12px;
+  cursor: pointer;
+  margin: 10px 10px;
 }
 
 .user-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 25%;
 }
 
 .contact {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
-.col1, .col2, .col3 {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
+.col1,
+.col2,
+.col3 {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
 
 .update {
-    width: 480px !important;
-    color: rgb(6, 224, 6) !important;
+  width: 480px !important;
+  color: rgb(6, 224, 6) !important;
 }
 
 .checkout-page button:disabled {
-    background-color: #ccc;
-    color: #666;
-    cursor: not-allowed;
-  }
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+}
 
 .cart-modal-footer button:disabled {
-    background-color: #ccc;
-    color: #666;
-    cursor: not-allowed;
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
 }
