--- a/frontend/src/components/UI/BackToTopButton.module.css
+++ b/frontend/src/components/UI/BackToTopButton.module.css
@@ -1,20 +1,19 @@
 /* BackToTopButton.module.css */
 .backToTopButton {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  
-  .backToTopButton:hover {
-    background-color: #0056b3;
-    transform: translateY(-2px);
-  }
-  
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.backToTopButton:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
+}
